plugins {
	id 'org.springframework.boot' version '3.5.4' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
	id 'java'
}

group = 'com.sleekydz86'
version = '0.0.1-SNAPSHOT'

repositories {
	mavenCentral()
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'java-test-fixtures'

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

	repositories {
		mavenCentral()
	}

	configurations.all {
		resolutionStrategy {
			force(
					'io.projectreactor.netty:reactor-netty:1.2.9',
					'io.projectreactor.netty:reactor-netty-core:1.1.15',
					'io.projectreactor.netty:reactor-netty-http:1.1.15'
			)
			cacheChangingModulesFor 0, 'seconds'
			cacheDynamicVersionsFor 0, 'seconds'
		}
	}

	dependencyManagement {
		imports {
			mavenBom 'org.springframework.boot:spring-boot-dependencies:3.5.4'
			mavenBom 'io.projectreactor:reactor-bom:2023.0.8'
		}
		dependencies {
			dependency 'io.projectreactor.netty:reactor-netty:1.2.9'
			dependency 'io.projectreactor.netty:reactor-netty-core:1.1.15'
			dependency 'io.projectreactor.netty:reactor-netty-http:1.1.15'
		}
	}
	dependencies {
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.junit.jupiter:junit-jupiter-api'
		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
		testImplementation "org.mockito:mockito-core:5.8.0"
		testImplementation "org.mockito:mockito-junit-jupiter:5.8.0"
		implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	}

	tasks.withType(Test) {
		useJUnitPlatform()
	}
}